CHANGES IN FLTK 1.1.8

	- Documentation fixes (STR #1454, STR #1455, STR #1456,
	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
	  STR #1639, STR #1645, STR #1644, STR #1792, STR #1793,
	  STR #1742, STR #1777, STR #1794)
	- Fl_Help_View did not release the images it used (STR
	  #1817)
	- Shared libraries would not build on 64-bit Linux
	  systems with an existing non-PIC FLTK installation
	  (STR #1791)
	- Fl_Browser::hide() and Fl_Browser::show() did not
	  correctly update the scrollbar (STR #1724)
	- The configure script now shows a summry of the
	  configuration results (STR #1810)
	- "fltk-config --use-* --libs" did not list all of the
	  dependent libraries (STR #1799)
	- Hiding a nested window on WIN32 caused 100% CPU (STR #1748)
	- Changing the window size in FLUID would not mark the 
	  project as modified (STR #1751)
	- Fixed fl_filename_isdir for "/"-path (STR #1761)
	- Fixed Fl_Chart drawing (STR #1756)
	- Fixed mapping of subwindows with unmapped parent
	  windows (STR #1706)
	- Fixed rendering of grayscale images with alpha
	  channel (STR #1703)
	- Fixed occasional incomplete refresh (STR #1681)
	- Improved fl_down, fl_frame, added fl_box (STR #1678)
	- Fixed selection of submenu items in 
	  input_choice (STR #1676)
	- Fixed calculation of stride for image scaling and
	  color manipulation (STR #1673)
	- Made -O3 the default optimization on Cygwin/Mingw since
	  -Os currently creates bad code (STR #1656)
	- OSF/Tru64 now uses 'install-sh' instead of 'install' to
	  accomodate for a missing '-d' option (STR #1632)
	- New option in Fluid project settings to translate all
	  shortcut modifiers from FL_META or FL_CTRL to FL_COMMAND
	- Added static icon, text selection, and HTML formatting to
	  fl_message etc. (STR #1626)
	- Fixed selection of first word in Fl_Help_View
	- Fixed endless loop in Fl_Text_Display (STR #1655)
	- Allowing shortcuts in Tabs (STR #1652)
	- Fixed Makefile "make clean" (STR #1642,
	  STR #1643, STR #1641)